# nodesk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: Editor.tsx  History.tsx  Recorder.tsx  ScreenshotEditor.tsx  Settings.tsx  Widget.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  notion.rs  ollama.rs  openrouter.rs  recorder.rs  screenshot.rs  settings.rs  whisper.rs
src/components/: Dialog.tsx  ErrorBubble.tsx
src/lib/: aiHtml.ts  fileFormat.ts  i18n.ts  tauri.ts
src/styles/: apple.css
