[package]
name = "nodesk"
version = "0.1.0"
description = "Notion tarzı masaüstü not uygulaması"
authors = ["umut"]
edition = "2021"

[lib]
name = "nodesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
